# website

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  notes.txt  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
about/: index.html
assets/: logo.pptx
blog/: index.html
docs/: README.md  about.md  index.md  projects.md
docs/assets/logo/: logo.pptx
docs/posts/posts/: access_mapping.md  assess.md  bubble_bobble.md  chessbot.md  espet.md  guitar_stool.md  janus.md  tesla.md
docs/stylesheets/: extra.css
docs/templates/: index.html  projects.html
posts/: index.html
posts/2017/05/28/guitar-stool/: index.html
posts/2018/12/10/bubble-bobble/: index.html
posts/2019/08/01/accessibility-constraint-mapping/: index.html
posts/2019/08/01/happy-new-years-eve/: index.html
posts/2020/08/25/neural-networks-for-ultrasonic-defect-detection/: index.html
posts/2021/05/05/chess-robot/: index.html
posts/2021/07/31/high-voltage-battery-firmware/: index.html
posts/2022/12/28/electrospray-thruster-design/: index.html
posts/2024/09/27/predictive-hall-thruster-modeling/: index.html
posts/archive/2017/: index.html
posts/archive/2018/: index.html
posts/archive/2019/: index.html
posts/archive/2020/: index.html
posts/archive/2021/: index.html
posts/archive/2022/: index.html
posts/archive/2024/: index.html
posts/category/projects/: index.html
projects/: index.html
resume/cv/: index.html
resume/downloads/: index.html
resume/resume/: index.html
search/: search_index.json
stylesheets/: about.css
