[project]
name = "website"
version = "0.1.0"
description = "Personal website"
authors = [
    {name = "Joshua Eckels", email = "eckelsjd@umich.edu"},
]
dependencies = [
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}

[project.urls]
Repository = "https://github.com/eckelsjd/website.git"
Documentation = "https://eckelsjd.github.io/website/"

[tool.pylint.MASTER]
ignore-paths = [ "^.venv/.*$", "^docs/*" ]

[tool.pdm]
distribution = false

[tool.pdm.install]
cache = true

[tool.pdm.scripts]
post_init = "pdm install"
docs = "mkdocs serve"

[tool.pdm.dev-dependencies]
dev = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.5"
]
